# estampas-roxwana

./: .gitignore  Informe de Estampa Ruana.md  index.html  package-lock.json  package.json  vite.config.ts
.codex/skills/roxwana-release-updater/: SKILL.md
.codex/skills/roxwana-release-updater/agents/: openai.yaml
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: api.ts  categories.ts  fileTypes.ts  filtering.ts  types.ts
tests/: filtering.test.ts
