[package]
name = "roxwana-biblioteca-visual"
version = "0.1.1"
description = "ROXWANA Biblioteca Visual"
authors = ["ROXWANA"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
